manifests/coffee-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: coffee
